--- a/templates/config.json
+++ b/templates/config.json
@@ -1,7 +1,8 @@
 {
   "blog": {
     "title": "Not Safe for Production",
-    "url": "https://notsafeforproduction.com",
-    "description": "Thoughts and musings not safe for Production"
+    "url": "https://www.notsafeforproduction.com",
+    "description": "Thoughts and musings not safe for Production",
+    "date": "2016"
   }
 }
