--- a/rust/page/package.json
+++ b/rust/page/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "slsblog2",
+  "name": "page",
   "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
-  "author": "ec2-user",
+  "author": "Orion Free <orion@orion.com>",
   "license": "MIT",
   "dependencies": {
-    "neon-cli": "^0.1.7"
+    "neon-cli": "^0.1.18"
   },
   "scripts": {
     "install": "neon build"
